# mis-eventos

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: Dockerfile  README  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b7730d6da34_initial_tables.py  2177816bf38e_file_cleanup.py  ea6156e079b7_add_speaker_name_to_event.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  events.py  sessions.py
backend/app/core/: cache.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: event.py  event_registration.py  session.py  user.py
backend/app/schemas/: auth.py  event.py  session.py
backend/app/services/: event_service.py  registration_service.py  session_service.py
backend/test/: conftest.py  test_auth.py  test_concurrency.py  test_event.py
frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/core/guards/: auth.ts  guest.ts
frontend/src/app/core/interceptors/: jwt.ts
frontend/src/app/core/models/: event.model.ts  user.ts
frontend/src/app/core/services/: auth.ts  event.spec.ts  event.ts
frontend/src/app/core/store/: auth-store.ts  auto-store.spec.ts  even-store.spec.ts  event-store.ts
frontend/src/app/features/auth/login/: login.html  login.scss  login.ts
frontend/src/app/features/profile/: profile.html  profile.scss  profile.ts
(+19 files in other folders)
